default homepage added

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://sayeed-cse.github.io/react-book-vibe/",
   "name": "react-books-vibe",
   "private": true,
   "version": "0.0.0",
