--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
+    "surge": "^0.24.6",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
